[modify]: logo things

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="panel-main__content">
                     <div class="ih-item circle effect right_to_left">            
                         <a href="#" title="" class="blog-button">
-                            <div class="img"><img src="assets/img/logo3.jpg" alt="img" class="js-avatar iUp profilepic"></div>
+                            <div class="img"><img src="assets/img/logo.jpg" alt="img" class="js-avatar iUp profilepic"></div>
                             <div class="info iUp">
                                 <div class="info-back">
                                     <h2> 
@@ -65,7 +65,7 @@
                                         <a href="https://blog.rustle.cc" class="blog-button" target="_blank">博客</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://wiki.rustel.cc" class="blog-button" target="_blank">Wiki</a>
+                                        <a href="https://wiki.rustle.cc" class="blog-button" target="_blank">维基</a>
                                     </li>
                                     <li class="navigation__item">
                                         <a href="https://nav.rustle.cc" class="blog-button" target="_blank">导航</a>
