--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Manford Home">
     <meta name="keywords" content="Manford, Homepage">
     <meta name="author" content="Manford">
-    <title>Manford Home</title>
+    <title>Manford's Home</title>
     <link rel="stylesheet" type="text/css" href="assets/css/onlinewebfonts.css"/>
     <link rel="stylesheet" type="text/css" href="assets/css/vno.css">
     <link rel="stylesheet" type="text/css" href="assets/css/iconfont.css">
