[modify]: nav item and icp href

--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
                                         </a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="#" title="cnblogs" target="_blank">
-                                            <i class='social iconfont icon-cnblogs'></i>
-                                            <span class="label">cnblogs</span>
+                                        <a href="https://weibo.com/ericfanme" title="weibo" target="_blank">
+                                            <i class='social iconfont icon-weibo'></i>
+                                            <span class="label">weibo</span>
                                         </a>
                                     </li>
 
@@ -125,7 +125,7 @@
             <p class="power">Powered By 
                 <a href="https://github.com/features/actions" target="_blank">GitHub Actions</a> And 
                 <a href="https://hitokoto.cn/" target="_blank">Hitokoto </a> | 
-				<a href="" target="_blank">鲁ICP2021034092号-1</a>
+				<a href="https://beian.miit.gov.cn/" target="_blank">鲁ICP2021034092号-1</a>
             </p>
         </div>
     </header>
