[modify]: readme and index

--- a/index.html
+++ b/index.html
@@ -58,9 +58,15 @@
                         <div>
                             <nav class="cover-navigation cover-navigation--primary">
                                 <ul class="navigation">
+								<!--
                                     <li class="navigation__item">
                                         <a href="/" class="blog-button">首页</a>
                                     </li>
+									-->
+                                    <li class="navigation__item">
+                                        <a href="https://nav.rustle.cc" class="blog-button" target="_blank">导航</a>
+                                    </li>
+
                                     <li class="navigation__item">
                                         <a href="https://blog.rustle.cc" class="blog-button" target="_blank">博客</a>
                                     </li>
@@ -68,14 +74,19 @@
                                         <a href="https://wiki.rustle.cc" class="blog-button" target="_blank">维基</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://nav.rustle.cc" class="blog-button" target="_blank">导航</a>
-                                    </li>
-                                    <li class="navigation__item">
                                         <a href="https://cloud.rustle.cc" class="blog-button" target="_blank">云盘</a>
                                     </li>
                                     <li class="navigation__item">
+                                        <a href="https://media.rustle.cc" class="blog-button" target="_blank">影音</a>
+                                    </li>
+                                    <li class="navigation__item">
+                                        <a href="https://torrent.rustle.cc" class="blog-button" target="_blank">qBit</a>
+                                    </li>
+									<!--
+                                    <li class="navigation__item">
                                         <a href="https://doku.rustle.cc" class="blog-button" target="_blank">自留地</a>
                                     </li>
+									-->
                                 </ul>
                             </nav>
                         </div>
