[modify] add cloudreve

--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
                                     <li class="navigation__item">
                                         <a href="https://torrent.rustle.cc" class="blog-button" target="_blank">qBit</a>
                                     </li>
+                                    <li class="navigation__item">
+                                        <a href="https://pan.rustle.cc" class="blog-button" target="_blank">存储</a>
+                                    </li>
 									<!--
                                     <li class="navigation__item">
                                         <a href="https://doku.rustle.cc" class="blog-button" target="_blank">自留地</a>
